# LIN_King

./: Lin.md  build.md  readme.md
UART_Serial_6844/: 6844通信.md  build.sh  demo_6844_parse.py  start.sh  ti_radar_integrated.py
UART_Serial_6844/log_example/: Cmd.txt  radar_parse_log.txt
UART_Serial_6844/src/arbe_msgs/: CMakeLists.txt  package.xml
UART_Serial_6844/src/ti_radar_ros/: CMakeLists.txt  package.xml
UART_Serial_6844/src/ti_radar_ros/config/: cpd_bottomShafa_20260610_oneZone.cfg  radar.rviz
UART_Serial_6844/src/ti_radar_ros/launch/: ti_radar.launch
UART_Serial_6844/src/ti_radar_ros/scripts/: radar_visualizer.py  ti_radar_integrated.py  ti_radar_publisher.py
docx/: build.md  通信协议.md
src/: gui_styles.py  lin_controller.py  main.py  protocol.py
src/lib/: lin_driver.py  lin_lib.py
src_c_example/: zcan.h
src_example/src_c_example/: test.c
src_example/src_python_example/: LIN_go.py  list_lin_device.py
