<?xml version="1.0"?>
<package format="2">
  <name>ti_radar_ros</name>
  <version>0.0.1</version>
  <description>TI雷达ROS驱动包</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>arbe_msgs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>arbe_msgs</exec_depend>
  <exec_depend>python-serial</exec_depend>
</package>